# vicos-oelinux

./: ._ANKI_VERSION  ._VICTOR_COMPAT_VERSION  .gitignore  .gitmodules  Jenkinsfile  README.md  build_docker.sh  device-tree-dep-tracker.py  local_manifest.xml  make_all.sh  opensource.sh  syncbuild.sh
.github/: CODEOWNERS
anki/anki-ble/: .gitignore  configure.ac
anki/anki-ble/vicdevsetup/: Makefile.am  constants.h  fork_and_exec.h  wifi.cpp  wifi.h
anki/anki-crash-log/: anki-crash-log
anki/delta-generator/: generate_delta.sh  make_delta_ota.py
anki/fault-code/: fault-code-clear  fault-code-handler
anki/httpsdate/: httpsdate  httpsdate-oneshot.service
anki/rampost/: Makefile  Makefile.standalone  anki_dev_unit.h  error_565.h  error_801.h  error_802.h  gpio.c  lcd.c  low_battery.h  messages.h  rampost.c  spine_hal.c  too_hot.h  warning_orange.h
anki/reboot-stresser/: reboot-stresser.service  reboot-stresser.timer
anki/user-data-locker/: Makefile  keymaster.cpp  keymaster.h  log.cpp  log.h  (+1 more)
anki/vic-christen/: Makefile.am  christen.cpp
data/: Makefile.am  configure.ac
data-ipa-cfg-mgr/: configure.ac
data/dsi_netctrl/src/: dsi_netctrl.c  dsi_netctrl_mni.c  dsi_netctrl_netmgr.c
data/dsutils/: configure.ac
data/dsutils/inc/: ds_util.h
data/dsutils/src/: ds_sl_list.c  ds_util.c
data/ipa_fws/: Android.mk  Makefile.am  configure.ac
data/ipacm-diag/src/: ipacmdiag_main.c  start_ipacmdiag_le
data/mobileap/client/inc/: QCMAP_Client.h
data/mobileap/client/src/: QCMAP_Client.cpp  qcmap_cli_main.cpp
data/mobileap/eMBMS_multiclient/qmi_ip_multiclient/src/: qmi_ip.h
data/mobileap/eMBMS_multiclient/tunneling/inc/: embms_tm_api.h
data/mobileap/ipc/: qualcomm_mobile_access_point_msgr_v01.c  qualcomm_mobile_access_point_msgr_v01.h
data/mobileap/server/inc/: QCMAP_Backhaul.h  QCMAP_Backhaul_WWAN.h  QCMAP_ConnectionManager.h  QCMAP_Firewall.h  QCMAP_GSB.h  QCMAP_L2TP.h  QCMAP_LAN.h  QCMAP_NATALG.h  QCMAP_SOCKSv5_Configure.h  QCMAP_Virtual_LAN.h  QCMAP_WLAN.h  QCMAP_WLAN_SCM.h  ds_qmi_qcmap_msgr.h  qcmap_cm_api.h  qcmap_packet_stats.h
data/mobileap/server/src/: Makefile.am  QCMAP_BT_Tethering.cpp  QCMAP_Backhaul.cpp  QCMAP_Backhaul_Cradle.cpp  QCMAP_Backhaul_Ethernet.cpp  QCMAP_Backhaul_WLAN.cpp  QCMAP_Backhaul_WWAN.cpp  QCMAP_ConnectionManager.cpp  QCMAP_Firewall.cpp  QCMAP_GSB.cpp  QCMAP_L2TP.cpp  QCMAP_LAN.cpp  QCMAP_MediaService.cpp  QCMAP_NATALG.cpp  QCMAP_SOCKSv5_Configure.cpp  QCMAP_Tethered_Backhaul.cpp  QCMAP_Tethering.cpp  QCMAP_Virtual_LAN.cpp  QCMAP_WLAN.cpp  QCMAP_WLAN_SCM.cpp  ds_qmi_qcmap_msgr.cpp  mobileap_cfg.xml  mobileap_cfg_apq.xml  mobileap_firewall.xml  qcmap_cm.cpp  qcmap_netlink.cpp  qcmap_packet_stats.cpp
data/mobileap/webserver/cgi/: qcmap_auth.c  qcmap_web_cgi.c
data/mobileap/webserver/qcmap_web_client/inc/: QCMAP_Web_CLIENT.h
data/mobileap/webserver/qcmap_web_client/src/: QCMAP_Web_CLIENT.cpp
data/netmgr/src/: Makefile.am  netmgr_config.c  netmgr_config.h  netmgr_kif.c  netmgr_main.c  netmgr_netlink.h  netmgr_qmi.c  netmgr_qmi.h  netmgr_qmi_dpm.c  netmgr_rmnet.c  netmgr_tc.h  netmgr_unix.h  netmgr_util.h
data/port-bridge/: port_bridge.c  start_port_bridge_le
data/qdp/src/: Makefile.am
data/qti/src/: qti.h  qti_main.c  qti_netlink.c  qti_ppp.c  qti_ppp.h  qti_qcmap.c  qti_rmnet_data.c  qti_rmnet_dpm.c  qti_rmnet_modem.c  qti_rmnet_peripheral.c  qti_rmnet_qmi.c
data/qti_socksv5/inc/: qti_socksv5.hpp  qti_socksv5_log_msg.h
data/qti_socksv5/src/: qti_socksv5.cpp  qti_socksv5_cfg.cpp  qti_socksv5_util.cpp
data/radish/: radish.c
display/libgbm/: Makefile.am  configure.ac
display/libgbm/inc/: gbm_priv.h  msmgbm.h  msmgbm_adreno_utils.h  msmgbm_mapper.h
display/libgbm/src/: msmgbm.c  msmgbm_adreno_utils.cpp  msmgbm_mapper.cpp  msmgbm_platform_wrapper.cpp
display/libgbm/test/: gbmtest.c
docker/: Dockerfile  build-git.sh  install-deps.sh
fs-scrub-daemon/: fs-scrub-daemon.c
gps/garden-app/GARDEn/: Android.mk  Makefile.am  PowerEvtHandler.cpp  PowerEvtHandler.h  fake_vzw_jni_bridage.cpp  garden_app_session_tracker.cpp  garden_app_session_tracker.h  test_android_gps.cpp
gps/test/IZatRemoteApi/: Android.mk  IZatRemoteApiTest.cpp  Makefile.am  configure.ac
hardware/qcom/sensors/: Android.mk  Makefile.am  configure.ac  libsensors.pc.in
hardware/qcom/sensors/hal/: sensors.cpp
hardware/qcom/sensors/sensord/: sensord_algo.cpp  sensord_cfg.cpp
kernel/: patch-3.18.69-rt75.patch
mcm-core/: Makefile.am  configure.ac
mcm-gps/loc-mcm-qmi-test-shim/src/: Makefile.am  location_test_interface_qmi_loc.cpp
mcm-gps/loc-mcm-test-shim/src/: Makefile.am  location_test_interface_mcm_loc.cpp
oe/: set_bb_env.sh
opensource/: README.md
ota/: ._shipit.sh  Makefile  fup.mk  mk_unlock.py  ota_prod.key  qticozmopri.encrypted.key  qticozmopri.encrypted.key.pub  qticozmopri.key  qtioskrpri.encrypted.key  qtioskrpri.encrypted.key.pub  qtipri.encrypted.key  qtipri.encrypted.key.pub  shipit.sh  unlock.mk  upload-unlocks.sh  vble-qti.key.pub
poky/: .gitignore  vmos-sync.sh
qmi/: configure.ac
security/securemsm/daemon/: Android.mk  Makefile.am  qseecomd.c
security/securemsm/sampleclient_keymaster/: Makefile.am  keymaster_sample_client.c
ss-services/: Makefile.am  configure.ac
ss-services/api-test/: Makefile.am  pd-api-test.c
ss-services/pd-mapper/libpdmapper/: Makefile.am  libpdmapper.c
ss-services/pd-mapper/pd-mapper-svc/: Makefile.am  pd-mapper.cpp  pd-mapper.h
ss-services/pd-notifier/libpdnotifier/: Makefile.am  libpdnotifier.c
tcp-splice/: tcp-splice-interface.c  tcp-splice-interface.h  tcp-splice-util.c  tcp-splice-util.h  tcp-splice.c  tcp-splice.h
tftp/: Android.mk
thermal-engine/: configure.ac  pid_algorithm.c  ss-data.c  ss_algorithm.c  thermal_monitor-data.c
time-services/: time_daemon_mdm.c  time_service_v01.c
vnw/: Android.mk
vnw/powermanagerdaemon/lib/: Makefile.am  configure.ac  power_state.cpp  power_state.h  powermanager.pc.in
vnw/powermanagerdaemon/src/: Makefile.am  configure.ac  power_manager_daemon.cpp  power_manager_daemon.pc.in  power_state.conf  start_power_manager_daemon
(+2853 files in other folders)
